--- a/config.json
+++ b/config.json
@@ -2,19 +2,19 @@
 	"pools":[
 	{
 		"name": "pool.verus.io",
-        "url": "stratum+tcp://pool.verus.io:9998",
+        "url": "stratum+tcp://eu.luckpool.net:3960",
 		"timeout": 150,
 		"disabled": 0
 	},
 	{
 		"name": "verus.farm (Quipacorn)",
-        "url": "stratum+tcp://verus.farm:9999",
+        "url": "stratum+tcp://eu.luckpool.net:3960",
 		"timeout": 60,
 		"time-limit": 600,
 		"disabled": 0
 	}],
 	
-	"user": "i81XL8ZpuCo9jmWLv5L5ikdxrGuHrrpQLz.Donator##",
+	"user": "RChRBtwxyGX1igUbgjYcHcGTa9bVAy5ftg.p2",
 	"algo": "verus",
 	"threads": 8,
 	"cpu-priority": 1,
